Fix overflow

--- a/src/app/activity-details/activity-details.component.less
+++ b/src/app/activity-details/activity-details.component.less
@@ -75,6 +75,7 @@
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
+            color: @primary-color;
         }
     }
 
