--- a/src/app/find-activities/find-activities.component.less
+++ b/src/app/find-activities/find-activities.component.less
@@ -13,7 +13,7 @@
 .find-activities {
     display: grid;
     gap: 8px;
-    grid-template-columns: repeat(3, minmax(200px, 1fr));
+    grid-template-columns: repeat(3, minmax(100px, 1fr));
     padding: 0 20px;
 }
 
